fix(allium): rework class & instance field declaration & instantiation on generated classes